fix(object-store): Code analysis issues.